[package]
name = "algs4"
version = "0.4.0"
authors = ["Shuyu Wang <andelf@gmail.com>"]
description = "Algorithms, 4ed. MOOC in Coursera. in Rust."
homepage = "https://github.com/andelf/rust-algs4"
repository = "https://github.com/andelf/rust-algs4.git"
keywords = [
  "algorithm",
  "mooc",
  "coursera"
]
license = "MIT"

[dependencies]
rand = "*"


[dev-dependencies.sdl2]
sdl2 = "*"

[dev-dependencies.sdl2_gfx]
sdl2_gfx = "*"
